syntax="proto3";
package hexagonal;

message UploadFileRequest{
    bytes chunk = 1;
}
message GetFileRequest{
    string hash = 1;
}

message GetFileChunk{
    bytes chunk = 1;
}

message Ack {
    bool ok = 1;
    string hash = 2;
}
service FileLibrary {
    rpc UploadFile(stream UploadFileRequest) returns (Ack);
    rpc GetFile(GetFileRequest) returns (stream GetFileChunk);
}